examples/test/testpolicy10947.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10947
  namespace: namespace276
spec:
  podSelector:
    matchLabels:
      key41: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value46
      podSelector:
        matchLabels:
          key36: value24
          key12: value10
          key28: value49
